--- a/rls-parent/pom.xml
+++ b/rls-parent/pom.xml
@@ -35,15 +35,12 @@
         <jackson.version>2.9.5</jackson.version>
         <org.jackson.version>1.9.4</org.jackson.version>
 
-        <commons-logging.version>1.2</commons-logging.version>
-        <commons-lang3.version>3.6</commons-lang3.version>
-        <commons-codec.version>1.10</commons-codec.version>
-        <commons-io.version>2.5</commons-io.version>
-        <commons-fileupload.version>1.3.3</commons-fileupload.version>
-        <commons-pool2.version>2.4.2</commons-pool2.version>
-        <commons-beanutils.version>1.9.3</commons-beanutils.version>
-        <commons-math3.version>3.6.1</commons-math3.version>
-        <commons-cli.version>1.4</commons-cli.version>
+        <commons.lang3.version>3.6</commons.lang3.version>
+        <commons.codec.version>1.10</commons.codec.version>
+        <commons.io.version>2.6</commons.io.version>
+        <commons.fileupload.version>1.3.3</commons.fileupload.version>
+        <commons.beanutils.version>1.9.3</commons.beanutils.version>
+        <commons.math3.version>3.6.1</commons.math3.version>
 
         <!-- 字符编码设置-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -75,18 +72,32 @@
             <version>${spring-security.version}</version>
         </dependency>
 
-        <!-- mysql驱动:com.mysql.jdbc.Driver -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql-connector.version}</version>
-        </dependency>
-
         <!-- spring data jpa -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>${spring-data-jpa.version}</version>
+        </dependency>
+
+        <!-- spring cache -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+
+        <!-- spring data redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+
+        <!-- mysql驱动:com.mysql.jdbc.Driver -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector.version}</version>
         </dependency>
 
         <!-- servlet  javaee -->
@@ -139,13 +150,6 @@
             <version>${druid.version}</version>
         </dependency>
 
-        <!-- jedis -->
-        <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>${jedis.version}</version>
-        </dependency>
-
         <!-- swagger2 ui -->
         <dependency>
             <groupId>io.springfox</groupId>
@@ -190,6 +194,44 @@
             <version>${org.jackson.version}</version>
         </dependency>
 
+
+       <!--commons 工具包-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.lang3.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons.codec.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.io.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>${commons.fileupload.version}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>${commons.beanutils.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>${commons.math3.version}</version>
+        </dependency>
 
     </dependencies>
 
